echo -e "\e]12;yellow\007"
echo -e "\e]13;green\007"
echo -e "\e]18;#ffaa00\007"
echo -e "\e]19;cyan\007"

Note that the setting of bold and underline colors using 18 and 19 are
Eterm extensions.
----------------------------------------------------------------------
Mon Mar 31 19:00:00 2003                          Simon Horman (horms)

Fixed compilation problem with XIM support which resulted
in Eterm segfaulting if the XIM server (kinput2) exited.
----------------------------------------------------------------------
Tue Apr 22 11:12:26 2003                        Michael Jennings (mej)

Fixed a couple minor type issues on 64-bit systems.

Cleaned up all the warnings in libscream.c and Esetroot.c.

Updated the spec file to depend on imlib2 and the JPEG/PNG loaders.
I hate to do that, but it seems necessary.
----------------------------------------------------------------------
Wed Apr 23 12:14:00 2003                        Michael Jennings (mej)

Apparently some versions of gcc (or maybe ld?) don't like duplicate
libraries on the link line.  Fix provided by Mark <somnione@gmx.net>.
----------------------------------------------------------------------
Thu Apr 24 14:29:05 2003                        Michael Jennings (mej)

Fixed seg fault caused by people who neglect to grow the multichar
font list in parallel with the normal font list.

Also tweaked the default fonts to be less error-prone.
----------------------------------------------------------------------
Mon May 12 22:07:45 2003                        Michael Jennings (mej)

Use icon window instead of icon pixmap only if strict ICCCM compliance
is requested via ./configure --enable-strict-icccm
----------------------------------------------------------------------
Tue Jun 10 12:19:00 2003                        Michael Jennings (mej)

Patch from Matt Zimmerman <mdz@debian.org> to correct buffer overflow
when $ETERMPATH is set too large.
----------------------------------------------------------------------